--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
   },
   "dependencies": {
     "@blueprintjs/popover2": "^1.11.1",
-    "dotenv": "^16.0.3",
-    "roamjs-components": "^0.75.1",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "axios": "^1.3.2",
+    "nearley": "^2.20.1",
+    "power-link-parser": "git+ssh://git@github.com:dragonforce2010/roam-website-title-parser.git",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "roamjs-scripts": "^0.26.26"
   }
 }
