--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "roam-power-chatgpt"]
 	path = roam-power-chatgpt
 	url = https://github.com/dragonforce2010/roam-power-chatgpt.git
+[submodule "roam-power-previewer"]
+	path = roam-power-previewer
+	url = https://github.com/dragonforce2010/roam-power-previewer.git
