--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "prebuild:roam": "npm install",
-    "build:roam": "roamjs-scripts build --depot",
+    "build:roam": "roamjs-scripts build --depot --webpack-config webpack.config.js",
     "dev": "roamjs-scripts dev --depot"
   },
   "dependencies": {
