refactor: 🔨 clean up unused code and optimize project structure
- Remove empty and unused CSS files
- Consolidate heading components
- Clean up dependencies
- Update gitignore
- Remove unused imports

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
+# Dependencies
 node_modules
+yarn.lock
+package-lock.json
+
+# Build
 dist
+extension.js
+extension.js.LICENSE.txt
+
+# OS
 .DS_Store
 *.log
+
+# Environment
 .env
-extension.js
