--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
     "dev": "roamjs-scripts dev --depot"
   },
   "dependencies": {
+    "@blueprintjs/core": "^4.0.0",
     "@blueprintjs/popover2": "^1.11.1",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "axios": "^1.3.2",
-    "nearley": "^2.20.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "roamjs-scripts": "^0.26.26"
